# openradardata-validator

./: .gitignore  README.md  odim2ordmsg.py  ord_validator.py  pyproject.toml  requirements-odim.txt
.github/workflows/: lint.yml  tests.yml  validate.yml
examples/bufr/: T_PABH21_C_EUOC_20241025120000.bufr
examples/json/: example_1_ptlis_SCAN_elevation_0.0_quantities_VRADH.json  example_2_pttrc_SCAN_elevation_0.0_quantities_DBZH_TH_VRADH.json  example_3_skkub_PVOL_elevations_0.0_0.5_1.0_1.5_2.0_2.7_3.4_4.4_7.0_11.4_18.3_26.7_quantities_TH.json  example_4_dksin_PVOL_elevations_0.48_0.65_0.96_1.47_2.37_4.81_8.39_10.0_12.96_15.01_quantities_DBZH_LDR_PHIDP_RHOHV_TH_VRAD_WRAD_ZDR.json
examples/odim/: 2024-08-21T040000Z-reflectivity-composite-opera.h5.json  2024-10-08T120000Z-rainfall_rate-composite-opera.h5.json  T_PAGZ54_C_LYBM_20240904070004.hdf  T_PAGZ54_C_LYBM_20240904070004.hdf.json  T_PAHA41_C_LPMG_20241008054701.h5.json  T_PAJZ60_C_LZIB_20241008052500.hdf.json  T_PAZA43_C_LPMG_20241008051005.h5.json  T_PAZA45_C_LPMG_20241008053005.h5  T_PAZA45_C_LPMG_20241008053005.h5.json  T_PAZZ43_C_EKMI_20241008073000.h5.json
schemas/: odim_to_e_soh_message.json  openradardata-radar_meta-spec.json  openradardata-spec.json
src/: radar_cf.py
src/openradardata_validator/: __main__.py  odim2ordmsg.py  ord_validator.py
src/openradardata_validator/schemas/: odim_to_e_soh_message.json
src/openradardata_validator/stations/: OPERA_RADARS.csv1
src/tests/: test_odim2ordmsg.py  test_ord_validator.py
stations/: OPERA_RADARS.csv
(+23 files in other folders)
